--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -1,8 +1,8 @@
 # dev-requirements.in
 -c requirements.txt
-strawberry-graphql[debug-server]
-black
+ruff
 mypy
-isort
 pytest
 ipdb
+flask-shell-ipython
+strawberry-graphql[debug-server, cli]
